# MLOps-project

./: .gitignore  HITL.md  README.md  classes.txt  dashboard.py  dvc.yaml  generate_report.py  hitl_parameters.yaml  index.html  mobilnet.ipynb  notebook.ipynb  params.yaml  pyproject.toml  requirements-freeze.txt  requirements.txt  run_hitl_cycle.py  train.py  useful_commands.md
.dvc/: config
.github/workflows/: mlops.yaml
data/: .gitignore  annotations_hitl1.csv.dvc  raw.dvc  scores.dvc  uncertain_images.dvc
data/uncertain_images/: annotations.csv
docker/: Dockerfile  startup.sh
docker/gpu/: Dockerfile
kubernetes/: deployment.yaml  runner-gpu.yaml  runner.yaml  service.yaml
notebook/: hitl.ipynb  hitl_train.ipynb  hitl_train_Cris.ipynb  mobilnet.ipynb  notebook.ipynb
src/: bentofile.yaml  evaluate.py  hitl_prepare.py  hitl_selection.py  hitl_train.py  hitl_train_Cris2.ipynb  merge_hitl_labels.py  predict_unlabeled.py  prepare.py  select_hitl.py  serve.py  train.py
