[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.28",
    "dvc[gs]>=3.63.0",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "label-studio-sdk>=2.0.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
]
